# voulr

./: .eslintignore  .gitignore  .npmrc  .prettierignore  .prettierrc.cjs  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: publish.yml
apps/landing/: .eslintrc.cjs  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.ts  vite.config.ts.timestamp-1683644974814-62b6accb9b875.mjs
apps/landing/src/: app.css  app.html
apps/landing/src/lib/components/: ArrowButton.svelte  Footer.svelte  Navbar.svelte
apps/landing/src/lib/constants/: FOOTER_LINKS.ts  footerUrls.ts
apps/landing/src/routes/: +error.svelte  +layout.svelte  +page.svelte
apps/landing/src/routes/pricing/: +page.svelte
apps/server/: Cargo.toml  package.json  wrangler.toml
apps/server/src/: lib.rs  main.rs  utils.rs
apps/web/: package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.ts
apps/web/src/: app.d.ts  app.html  hooks.server.ts
apps/web/src/lib/components/: ErrorMessage.svelte
apps/web/src/lib/constants/: publicRoutes.ts
apps/web/src/lib/prisma/: schema.prisma
apps/web/src/lib/rspc/: bindings.ts  client.ts
apps/web/src/lib/schemas/: user.ts
apps/web/src/lib/trpc/: client.ts  context.ts  router.ts
apps/web/src/lib/trpc/routes/: auth.ts
apps/web/src/lib/types/: bindings.ts
apps/web/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
apps/web/src/routes/(protected)/: +page.svelte
apps/web/src/routes/login/: +page.svelte
apps/web/src/routes/register/: +page.svelte
apps/web/src/routes/verify-email/: +page.svelte
apps/web/static/: webmanifest.json
core/: Cargo.toml
core/prisma/: schema.prisma
core/src/: lib.rs
core/src/api/: auth.rs  mod.rs  utils.rs
core/src/api/utils/: mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/crypto/src/argon2/: mod.rs
crates/prisma/: Cargo.toml
crates/prisma-cli/: Cargo.toml
crates/prisma/src/: prisma.rs
