[workspace]
resolver = "2"
members = [
	"core",
    "crates/*",
	"apps/server",
]

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/vloe/voulr"

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["rspc", "migrations"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["rspc", "migrations"] }
rspc = { version = "0.1.4" }
specta = { version = "1.0.4" }
tokio = { version = "1.28.2" }
httpz = { version = "0.0.3" }

[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", branch = "v2" }
rspc = { git = "https://github.com/oscartbeaumont/rspc", branch = "specta-v2" }
