[package]
name = "voulr-core"
version = "0.0.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
rspc = { workspace = true, features = ["alpha"] }
httpz = { workspace = true, features = ["axum"] }
specta = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
