[package]
name = "voulr-core"
version = "0.0.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
prisma-client-rust = { workspace = true }
rspc = { workspace = true, features = ["alpha"] }
httpz = { workspace = true, features = ["axum"] }
specta = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
voulr-prisma = { path = "../crates/prisma" }
voulr-crypto = { path = "../crates/crypto" }
regex = "1.8.4"
