[package]
name = "voulr-server"
version = "0.0.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
voulr-core = { path = "../../core" }
axum = "0.6.18"
rspc = { workspace = true, features = ["axum"] }
serde = { version = "1.0.163", features = ["derive"] } 
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.4.0", features=['cors'] }
httpz = { workspace = true, features = ["axum"] }
