[package]
name = "voulr-server"
version = "0.0.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
voulr-core = { path = "../../core" }
voulr-prisma = { path = "../../crates/prisma" }
axum = "0.6.18"
rspc = { workspace = true, features = ["axum"] }
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.4.0", features=['cors'] }
httpz = { workspace = true, features = ["axum", "workers"] }
